--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 			<div>
 				{{test}}
 			</div>
+			<div ng-repeat="post in posts">
+  			{{post.title}} - upvotes: {{post.upvotes}}
+			</div>
 		</body>
 	</head>
 </html>
