--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
 			<div>
 				{{test}}
 			</div>
-			<div ng-repeat="post in posts">
+			<div ng-repeat="post in posts | orderBy: '-upvotes'">
   			{{post.title}} - upvotes: {{post.upvotes}}
 			</div>
+			<form ng-submit="addPost()">
+				<input type="text" ng-model="title"></input>
+				<button type="submit"> POST </button>
+			</form>
 		</body>
 	</head>
 </html>
