--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 		<title>Anticipate</title>
 			<link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">		
 		  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.10/angular.min.js"></script>
-    <script src="app.js"></script>
+			<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
+    	<script src="app.js"></script>
 		<body ng-app="anticipate" ng-controller="MainCtrl">
 		  <div class="row">
 		    <div class="col-md-6 col-md-offset-3">
