--- a/index.html
+++ b/index.html
@@ -5,35 +5,42 @@
 		  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.10/angular.min.js"></script>
 			<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
     	<script src="app.js"></script>
-		<body ng-app="anticipate" ng-controller="MainCtrl">
+
+		<body ng-app="anticipate">
 		  <div class="row">
 		    <div class="col-md-6 col-md-offset-3">
+					<div class="page-header"><h1>ANTICIPATE</h1></div>		    	
+		    	<ui-view></ui-view>
 
-		    	<div class="page-header"><h1>ANTICIPATE</h1></div>
-
-					<div ng-repeat="post in posts | orderBy: '-upvotes'">
-						<span ng-click="incrementUpvotes(post)">^^^</span>
-						<a ng-show="post.link" href="{{post.link}}">{{post.title}}</a>
-						<span ng-hide="post.link">{{post.title}}</span>
-		  			 - upvotes: {{post.upvotes}}
-					</div>
-
-					<!-- FORM -->
-					<form ng-submit="addPost()">
-						<h3>Add a new post </h3>
-
-						<div class="form-group">
-							<input type="text" class="form-control" placeholder="Title" ng-model="title"></input>
+		    	<!-- home.html template -->
+		    	<script type="text/ng-template" id="/home.html">
+						<div ng-repeat="post in posts | orderBy: '-upvotes'">
+							<span ng-click="incrementUpvotes(post)">^^^</span>
+							<a ng-show="post.link" href="{{post.link}}">{{post.title}}</a>
+							<span ng-hide="post.link">{{post.title}}</span>
+			  			 - upvotes: {{post.upvotes}}
 						</div>
+						<!-- FORM -->
+						<form ng-submit="addPost()">
+							<h3>Add a new post </h3>
 
-						<div class="form-group">
-							<input type="text" class="form-control" placeholder="Link" ng-model="link"></input>
+							<div class="form-group">
+								<input type="text" class="form-control" placeholder="Title" ng-model="title"></input>
+							</div>
+
+							<div class="form-group">
+								<input type="text" class="form-control" placeholder="Link" ng-model="link"></input>
+							</div>
+						
+							<button type="submit" class="btn btn-primary"> POST </button>
+						</form>
+			
+		    	</script>
+					<script type="text/ng-template" id="/test.html">		    	
+						<div>
+							<h1>TEST</h1>
 						</div>
-					
-						<button type="submit" class="btn btn-primary"> POST </button>
-					</form>
-		
-
+					</script>
 		</body>
 	</head>
 </html>
