Create controller for posts, PostCtrl

--- a/index.html
+++ b/index.html
@@ -36,11 +36,14 @@
 						</form>
 			
 		    	</script>
+
+		    	<!-- test.html template -->
 					<script type="text/ng-template" id="/test.html">		    	
 						<div>
 							<h1>TEST</h1>
 						</div>
 					</script>
+					
 		</body>
 	</head>
 </html>
